refactor: pathfinding logic with Node chain and generic target search